--- a/provaConnessioneDB/.project
+++ b/provaConnessioneDB/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ProgettoP1</name>
+	<name>provaConnessioneDB</name>
 	<comment></comment>
 	<projects>
 	</projects>
